# pxls

./: .gitignore  .lint.cfg  README.md  __init__.py  pyproject.toml
.github/workflows/: python-app.yml
pxls/: __init__.py  connector.py  palette.py  template.py
