[tool.poetry]
name = "pxls"
version = "0.1.0"
description = "Easy interfacing with pxls.space."
authors = ["Seon"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
numpy = "^1.20.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
